removed dark mode js and plugin for now + fixed top of page button

--- a/style.css
+++ b/style.css
@@ -77,6 +77,15 @@ body {
     z-index: 1001;
 }
 
+.menu-container li {
+    width: 38px;
+    height: 38px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .menu-container li a {
     height: 32px;
     width: 32px;
